--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "ing/icon.png",
+    "default_icon": "img/icon.png",
     "default_popup": "html/popup.html",
     "default_title": "Click here!"
   },
